@@ -32,6 +32,8 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
 
+  test: ^1.22.0
+
 flutter_native_splash:
   color: "#ffffff" 
   image: "assets/images/Braum_10.jpg" 
