@@ -1,6 +1,7 @@
 2.1
 - Implements splashscreen
 - Implements homescreen
+- Includes testing package
 
 2.0
 - Implements a Flutter project to replace the old python script
